# PhoneLifeAgent

./: .gitignore  BLOG.md  README.md  pyproject.toml
apps/desktop_studio/: main.py  ui_job_defaults.py  ui_strings.py
apps/ios_lifelogger/: .gitignore  README.md  README.zh-CN.md
apps/ios_lifelogger/LifeLogger/: AudioSegmentLogger.swift  CameraClipLogger.swift  CameraFormatCatalog.swift  CameraPreview.swift  ContentView.swift  Info.plist  LifeLoggerApp.swift  LoggerSettings.swift  LoggerViewModel.swift  SensorLoggers.swift  SessionFiles.swift
apps/ios_lifelogger/LifeLogger.xcodeproj/: project.pbxproj
apps/ios_lifelogger/tools/: session_summary.py
life_report/: __init__.py  audio_products.py  cli.py  comic_products.py  context_injection.py  context_store.py  highlight_video_products.py  image_quality.py  location_products.py  model_probe.py  motion_products.py  pipeline_defaults.py  publish_run.py  schemas.py  session_loader.py  session_pipeline.py  session_preflight.py  settings_store.py  story_products.py  video_products.py  video_story.py
life_report/model_engine/: __init__.py  aliyun.py  base.py  factory.py  mock.py
tests/: test_aliyun_model_engine.py  test_audio_products.py  test_comic_products.py  test_highlight_video_products.py  test_image_quality.py  test_location_motion_products.py  test_model_probe.py  test_pipeline_defaults.py  test_publish_run.py  test_session_loader.py  test_session_pipeline.py  test_session_preflight.py  test_settings_store.py  test_story_products.py  test_video_products.py
(+2 files in other folders)
