[project]
name = "phonelifeagent"
version = "0.1.0"
description = "PhoneLifeAgent Life Report pipeline"
requires-python = ">=3.9"
dependencies = ["numpy>=2.0.0", "Pillow>=10.0.0"]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["life_report*"]

[project.optional-dependencies]
desktop = ["PySide6>=6.7"]
aliyun = ["openai>=1.52.0"]
all = ["PySide6>=6.7", "openai>=1.52.0", "numpy>=2.0.0", "Pillow>=10.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
